Add Initial Styling on Index.html

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section id="hero">
             <img src="resources/images/foto_perfil.jpeg" alt="Mateus Colombo Godoy">
-            <h1>Hello, and Welcome to my Portfolio!</h1>
+            <h1>Hello, and Welcome<br>to my Portfolio!</h1>
         </section>
         <section id="about-me">
             <h2>About Me</h2>
@@ -54,13 +54,15 @@
             <section>
                 <h3>Projects</h3>
                 <ul>
-                    <li><a href="https://thegody.itch.io/gd50s-tome-of-infinity-knowledge">GD50's Tome of Infinity
+                    <li><a href="https://thegody.itch.io/gd50s-tome-of-infinity-knowledge" target="_blank">GD50's Tome
+                            of Infinity
                             Knowledge</a> </li>
-                    <li><a href="https://thegody.itch.io/fossils-on-site">Game - Fossils On Site!</a></li>
+                    <li><a href="https://thegody.itch.io/fossils-on-site" target="_blank">Game - Fossils On Site!</a>
+                    </li>
                     <li><a href="https://evergreenfields.azurewebsites.net" target="_blank">Evergreen Fields Park</a>
                     </li>
                     <li><a href="https://seattlereelers.azurewebsites.net/" target="_blank">Seattle Reelers</a></li>
-                    <li>Project #5</li>
+                    <li>This Website Itself!</li>
                 </ul>
             </section>
         </article>
