Add More Index Page Styling

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <h2>&lt;Mateus Colombo Godoy/&gt;</h2>
+        <h2><span class="name-detail">&lt;</span>Mateus Colombo Godoy<span class="name-detail">/&gt;</span></h2>
         <nav>
             <ul>
                 <li><a href="#about-me">About Me</a></li>
@@ -41,7 +41,10 @@
         </section>
         <article id="knowledges">
             <h2>Knowledges</h2>
-            <section>
+            <aside>
+                <p>Click on the items to see more.</p>
+            </aside>
+            <section class="sub-section">
                 <h3>Learnings</h3>
                 <ul>
                     <li>Food Engineer Graduation</li>
@@ -51,13 +54,13 @@
                             Complete List</a></li>
                 </ul>
             </section>
-            <section>
+            <section class="sub-section">
                 <h3>Projects</h3>
                 <ul>
                     <li><a href="https://thegody.itch.io/gd50s-tome-of-infinity-knowledge" target="_blank">GD50's Tome
                             of Infinity
                             Knowledge</a> </li>
-                    <li><a href="https://thegody.itch.io/fossils-on-site" target="_blank">Game - Fossils On Site!</a>
+                    <li><a href="https://thegody.itch.io/fossils-on-site" target="_blank">Fossils On Site!</a>
                     </li>
                     <li><a href="https://evergreenfields.azurewebsites.net" target="_blank">Evergreen Fields Park</a>
                     </li>
