Add Knowledges Cards Initial Design

--- a/index.html
+++ b/index.html
@@ -29,17 +29,27 @@
             <img src="resources/images/foto_perfil.jpeg" alt="Mateus Colombo Godoy">
             <h1>Hello, and Welcome<br>to my Portfolio!</h1>
         </section>
-        <section id="about-me">
+        <section id="about-me" class="nav-offset">
             <h2>About Me</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem deleniti impedit nesciunt! Praesentium
-                quas modi tempore dolore quo quia molestias, sit, dolores error veniam qui, esse magnam laudantium
-                voluptate enim.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic delectus tempora eos magnam omnis, harum
-                exercitationem vel! Perferendis, ratione maiores error asperiores veniam eligendi necessitatibus.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet nisi similique magni nemo ipsam voluptatum
-                veniam distinctio tempora quo? Dolores.</p>
+            <p>I was born in a small town in Brazil and went on to earn a degree in Food Engineering and while it's a
+                wonderful field, I realized that it wasn't for me. It wasn't until
+                two years ago
+                that I had my first encounter with programming, but since then, I have been fully invested in it.
+                Learning to code has
+                been a transformative experience for me, and it's opened up a whole new world of possibilities. Looking
+                back, it's
+                fascinating to see how all the pieces of my life have led up to this moment.</p>
+            <p>I started my programming journey with C# and quickly became fascinated by game development. I spent
+                countless hours
+                studying and experimenting with Unity, and it was an incredibly rewarding experience. However, after
+                nearly two years, I
+                began to feel like I wanted to explore other possibilities. That's when I discovered the world of web
+                development, and I
+                knew I had found my calling. I've been diving deep into this fascinating field ever since, and I'm
+                constantly amazed by
+                all the amazing things that can be done with C# and the web.</p>
         </section>
-        <article id="knowledges">
+        <article id="knowledges" class="nav-offset">
             <h2>Knowledges</h2>
             <aside>
                 <p>Click on the items to see more.</p>
@@ -47,29 +57,125 @@
             <section class="sub-section">
                 <h3>Learnings</h3>
                 <ul>
-                    <li>Food Engineer Graduation</li>
-                    <li>Introduction to Game Development</li>
-                    <li>C# Master Course</li>
-                    <li><a href="https://mateuscg.notion.site/Certificates-8424715b0c5649e2bcaa5f3c78f3d29d">See the
-                            Complete List</a></li>
+                    <li>
+                        <h4 class="li-title">Food Engineer Graduation</h4>
+                        <section class="show-section">
+                            <p class="li-paragraph">
+                                My journey began at the Universidade de São Paulo, Food Engineering at Universidade de
+                                São Paulo taught me critical thinking and a passion for problem-solving.
+                            </p>
+                            <a href="https://www5.usp.br/ensino/graduacao/cursos-oferecidos/engenharia-de-alimentos/"
+                                target="_blank">Visit
+                                the Site</a>
+                        </section>
+                        <button class="li-button">Show More</button>
+                    </li>
+                    <li>
+                        <h4 class="li-title">Introduction to Game Development</h4>
+                        <section class="show-section">
+                            <p class="li-paragraph">Via lectures and hands-on projects, the course explores principles
+                                of 2D
+                                and 3D graphics,
+                                animation, sound, and
+                                collision detection using frameworks like Unity and LÖVE 2D, as well as languages like
+                                Lua
+                                and C#.</p>
+                            <a href="https://www.edx.org/course/cs50s-introduction-to-game-development"
+                                target="_blank">Visit
+                                the Site</a>
+                        </section>
+                        <button class="li-button">Show More</button>
+                    </li>
+                    <li>
+                        <h4 class="li-title">C# Master Course</h4>
+                        <section class="show-section">
+                            <p class="li-paragraph">I completed Tim Corey's C# Master Course and gained mastery in the
+                                C# programming
+                                language. The course covers all major C#
+                                features, has 70+ hours of content and provides real-world examples. I learned a lot and
+                                expanded my skillset. Highly
+                                recommend it!</p>
+                            <a href="https://www.iamtimcorey.com/courses/csharp-mastercourse/" target="_blank">Visit the
+                                Site</a>
+                        </section>
+                        <button class="li-button">Show More</button>
+                    </li>
+                    <li>
+                        <h4 class="li-title">Checkout the Complete List!</h4>
+                        <section class="show-section">
+                            <p class="li-paragraph">
+                                If you wish to check an updated list containing everthing that I studied so far, here's
+                                the link to it! This simple website is powered by Notion.
+                            </p>
+                            <a href="https://mateuscg.notion.site/Certificates-8424715b0c5649e2bcaa5f3c78f3d29d"
+                                target="_blank">Visit
+                                the
+                                Site</a>
+                        </section>
+                        <button class="li-button">Show More</button>
+                    </li>
                 </ul>
             </section>
             <section class="sub-section">
                 <h3>Projects</h3>
                 <ul>
-                    <li><a href="https://thegody.itch.io/gd50s-tome-of-infinity-knowledge" target="_blank">GD50's Tome
+                    <li>
+                        <h4 class="li-title">GD50's Tome
                             of Infinity
-                            Knowledge</a> </li>
-                    <li><a href="https://thegody.itch.io/fossils-on-site" target="_blank">Fossils On Site!</a>
+                            Knowledge</h4>
+                        <section class="show-section">
+                            <p class="li-paragraph">Build a tower to reach the wizard's castle in this Tetris-inspired
+                                game.
+                                Add a new twist to the classic gameplay with
+                                challenging strategy.</p>
+                            <a href="https://thegody.itch.io/gd50s-tome-of-infinity-knowledge" target="_blank">Play the
+                                Game</a>
+                        </section>
+                        <button class="li-button">Show More</button>
+
                     </li>
-                    <li><a href="https://evergreenfields.azurewebsites.net" target="_blank">Evergreen Fields Park</a>
+                    <li>
+                        <h4 class="li-title">Fossils on Site!</h4>
+                        <section class="show-section">
+                            <p class="li-paragraph">Join the ultimate fossil hunt with this tabletop-inspired game! Dig
+                                deep
+                                to uncover hidden fossils and add them to your
+                                collection. This game was originally made for a Game Jam hosted by GameDevTv in 2022.
+                            </p>
+                            <a href="https://thegody.itch.io/fossils-on-site" target="_blank">Play the Game</a>
+                        </section>
+                        <button class="li-button">Show More</button>
                     </li>
-                    <li><a href="https://seattlereelers.azurewebsites.net/" target="_blank">Seattle Reelers</a></li>
-                    <li>This Website Itself!</li>
+                    <li>
+                        <h4 class="li-title">Evergreen Fields Park</h4>
+                        <section class="show-section">
+                            <p class="li-paragraph">Welcome to Evergreen Fields! This website was created as a practice
+                                project for Codecademy using only HTML and CSS, and uses pictures that I took myself
+                                while
+                                traveling.</p>
+                            <a class="li-anchor" href="https://evergreenfields.azurewebsites.net" target="_blank">Visit
+                                the
+                                Site</a>
+                        </section>
+                        <button class="li-button">Show More</button>
+                    </li>
+                    <li>
+                        <h4 class="li-title">Seattle Reelers</h4>
+                        <section class="show-section">
+                            <p class="li-paragraph">This website is a practice project that I created to showcase my
+                                programming skills using only HTML and CSS as a homework from Codecademy. Feel free to
+                                take
+                                a look around and see what
+                                I've been up to!</p>
+                            <a href="https://seattlereelers.azurewebsites.net/" target="_blank">Visit the
+                                Site</a>
+                        </section>
+                        <button class="li-button">Show More</button>
+                    </li>
                 </ul>
             </section>
         </article>
-        <section id="technologies">
+        <section id="technologies" class="nav-offset">
             <h2>Technologies</h2>
             <section>
                 <ul>
@@ -128,6 +234,7 @@
     <footer>
         <h6>Thank you for checking my portfolio. Hugs from Brazil.</h6>
     </footer>
+    <script src="resources/js/site.js"></script>
 </body>
 
 </html>
