Add JavaScript Effects
Completed the Dark Mode effect on the entire page, as well as the effect
added to the header that switches from Full name to Initials only when
the user scroll. Did some minor adjustments to the About Me text too.

--- a/index.html
+++ b/index.html
@@ -14,15 +14,20 @@
 
 <body>
     <header>
-        <h2><span class="name-detail">&lt;</span>Mateus Colombo Godoy<span class="name-detail">/&gt;</span></h2>
-        <nav>
-            <ul>
-                <li><a href="#about-me">About Me</a></li>
-                <li><a href="#knowledges">Knowledges</a></li>
-                <li><a href="#technologies">Technologies</a></li>
-                <li><a href="contact.html">Contact Me</a></li>
-            </ul>
-        </nav>
+        <h2><span class="name-detail">&lt;</span><span id="name-header">Mateus Colombo Godoy</span><span
+                class="name-detail">/&gt;</span></h2>
+        <section class="header-right">
+            <button id="dark-mode-btn">Light Mode</button>
+
+            <nav>
+                <ul>
+                    <li><a href="#about-me">About Me</a></li>
+                    <li><a href="#knowledges">Knowledges</a></li>
+                    <li><a href="#technologies">Technologies</a></li>
+                    <li><a href="contact.html">Contact Me</a></li>
+                </ul>
+            </nav>
+        </section>
     </header>
     <main>
         <section id="hero">
@@ -31,14 +36,14 @@
         </section>
         <section id="about-me" class="nav-offset">
             <h2>About Me</h2>
-            <p>I was born in a small town in Brazil and went on to earn a degree in Food Engineering and while it's a
+            <p>I was born in a small town in Brazil, where I lived almost my entire life until I went on to earn a
+                degree in
+                Food Engineering and while it's a
                 wonderful field, I realized that it wasn't for me. It wasn't until
                 two years ago
                 that I had my first encounter with programming, but since then, I have been fully invested in it.
                 Learning to code has
-                been a transformative experience for me, and it's opened up a whole new world of possibilities. Looking
-                back, it's
-                fascinating to see how all the pieces of my life have led up to this moment.</p>
+                been a transformative experience for me, and it's opened up a whole new world of possibilities.</p>
             <p>I started my programming journey with C# and quickly became fascinated by game development. I spent
                 countless hours
                 studying and experimenting with Unity, and it was an incredibly rewarding experience. However, after
@@ -51,9 +56,6 @@
         </section>
         <article id="knowledges" class="nav-offset">
             <h2>Knowledges</h2>
-            <aside>
-                <p>Click on the items to see more.</p>
-            </aside>
             <section class="sub-section">
                 <h3>Learnings</h3>
                 <ul>
