Finish Contact.html Style

--- a/contact.html
+++ b/contact.html
@@ -13,26 +13,32 @@
 
 <body>
     <header>
-        <h2>&lt;Mateus Colombo Godoy/&gt;</h2>
-        <nav>
-            <ul>
-                <li><a href="index.html">About Me</a></li>
-                <li><a href="contact.html">Contact Me</a></li>
-            </ul>
-        </nav>
+        <h2><span class="name-detail">&lt;</span><span id="name-header">Mateus Colombo Godoy</span><span
+                class="name-detail">/&gt;</span></h2>
+        <section class="header-right">
+            <button id="dark-mode-btn">Light Mode</button>
+
+            <nav>
+                <ul>
+                    <li><a href="index.html">About Me</a></li>
+                    <li><a href="contact.html">Contact Me</a></li>
+                </ul>
+            </nav>
+        </section>
     </header>
     <main>
-        <section>
-            <h1>Information</h1>
+        <section id="contact-section">
+            <h1>Contact Me</h1>
             <p>Feel free to contact me on the email below if you want to know more about my work, or just want to talk!
             </p>
-            <span>mateuscgodoy@gmail.com</span>
+            <span id="email-span">mateuscgodoy@gmail.com</span>
         </section>
 
     </main>
     <footer>
         <h6>Thank you for checking my portfolio. Hugs from Brazil.</h6>
     </footer>
+    <script src="resources/js/contact.js"></script>
 </body>
 
 </html>
